[gd_scene load_steps=4 format=2]

[ext_resource path="res://World/Interactive/ColorPatternPuzzle/ColorPatternPuzzle.gd" type="Script" id=1]
[ext_resource path="res://World/Interactive/ColorPatternPuzzle/ColoredButton/ColoredButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/Interactive/ColorPatternPuzzle/puzzle_fail.wav" type="AudioStream" id=3]

[node name="ColorPatternPuzzle" type="Node2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="Timeout" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="RedButton" parent="." instance=ExtResource( 2 )]
position = Vector2( -45, 0 )

[node name="YellowButton" parent="." instance=ExtResource( 2 )]
position = Vector2( 45, 0 )

[node name="BlueButton" parent="." instance=ExtResource( 2 )]

[node name="GreenButton" parent="." instance=ExtResource( 2 )]
position = Vector2( -15, 0 )

[node name="FailSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="timeout" from="Timeout" to="." method="_on_Timeout_timeout"]
[connection signal="pressed" from="RedButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="YellowButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BlueButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GreenButton" to="." method="_on_Button_pressed"]
